# lr

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  FORMULAS.md  GUIDE.md  PARAMETER_REASONING.md  QUICKSTART.md  RUST_AVELLANEDA_IMPLEMENTATION_PLAN.md  STRATEGY_COMPARISON.md  WS_GUIDE.md  config.toml  devlog.md  grid_details.md
.ai/: AUTOMATE.md  DUAL_AI.md  README.md  auto-implement.sh  implement.sh  review-any.sh  review.sh  task.sh
.github/: CLAUDE.md  CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: DetailedAccount.md  ERROR_HANDLING.md  HYBRID_PIPELINE_ROADMAP.md
examples/: INVENTORY_SKEW_README.md  debug_market_info.rs  find_client_id_fields.rs  test_client_id_fields.rs  test_fake_channels_fixed.rs  test_payload_format.rs
examples/benchmarks/: bench_ws_vs_rest.rs  benchmark_batch_submit.rs  benchmark_batch_submit_v2.rs  benchmark_batch_vs_single.rs  benchmark_close_methods.rs  benchmark_order_latency.rs  benchmark_single_submit.rs  benchmark_single_submit_v2.rs  benchmark_ws_optimizations.rs  benchmark_ws_parallel_close.rs  latency_common.rs
examples/common/: config.rs  env.rs  example_context.rs
examples/monitoring/: channel_data_collection_test.rs  compare_prices.rs  monitor_active_orders.rs  monitor_trade_fills.rs  multi_channel_monitor.rs  orderbook_depth_analysis - Copy.rs  orderbook_depth_analysis.rs  position_monitor.rs  test_bbo_reliability.rs
examples/monitoring/v3_test/: monitor_market_v3.rs
examples/order_management/: advanced_order_tests.rs  close_position.rs  close_position_limit_ioc.rs  close_position_limit_ioc_ws.rs  close_position_ws.rs  grid_batch_cancel_replace.rs  place_visible_orders.rs  submit_test_order.rs  test_batch_cancel.rs  test_batch_tx.rs  test_cancel_all.rs  test_cancel_all_rest.rs  test_cancel_replace.rs  test_cancel_replace_batch.rs  test_cancel_single.rs  test_eth_order.rs  test_market_order.rs  test_market_reduce_only.rs  test_postonly_order.rs  test_proper_close_position.rs  test_reduceonly_order.rs  test_simple_limit.rs  test_specific_order.rs  test_update_margin.rs  transaction_submission_test.rs
examples/quickstart/: 01_quickstart.rs  02_order_lifecycle.rs  03_market_data.rs  04_account_history.rs  05_websocket.rs  06_websocket_all_channels.rs  07_websocket_transaction.rs  08_close_position.rs  09_batch_transactions.rs  10_market_making_bot.rs
examples/rest_api/: check_margin.rs  check_open_orders.rs  check_orders.rs  test_auth_signing.rs  test_full_order_lifecycle.rs  test_get_account_info.rs  test_get_active_orders.rs  test_get_fills.rs  test_get_funding_rates.rs  test_get_inactive_orders.rs  test_get_market_stats.rs  test_get_nonce.rs  test_get_orderbook.rs  test_get_pnl.rs  test_get_positions.rs  test_get_recent_trades.rs  test_send_safe_order.rs  test_send_transaction.rs
examples/trading/: auto_order_manager.rs  book_diagnostics.rs  dynamic_trailing_grid - Copy (2).rs  dynamic_trailing_grid - Copy.rs  dynamic_trailing_grid.rs  dynamic_trailing_grid_backup2.rs  inventory_skew_adjuster.rs  quote_generator.rs  simple_order_refresher.rs  simple_twoside_mm.rs  simple_twoside_mm_mark.rs  simple_twoside_mm_microprice.rs  simple_twoside_mm_obm.rs  simple_twoside_mm_obm_api.rs  simple_twoside_mm_obm_v2.rs  simple_twoside_mm_peer.rs  twoside_shared.rs
examples/trading/avellaneda/: main.rs
examples/trading/v3_test/: mm_hawkes - Copy.rs  mm_hawkes.rs  mm_hawkes_guide.txt  simple_twoside_mm_obm_v3.rs
examples/websocket/: comprehensive_websocket_test.rs  test_17_channels.rs  test_all_17_channels.rs  test_orderbook.rs  test_ping_pong.rs  websocket_stress_test.rs
src/: errors.rs  lib.rs  nonce_manager.rs  signer.rs  signer_client.rs  timings.rs  trading_helpers.rs  transactions.rs  tx_executor.rs  types.rs  ws_client.rs
src/apis/: configuration.rs  mod.rs
src/avellaneda/: config.rs  execution.rs  inventory.rs  market_data.rs  mod.rs  participation.rs  spreads.rs  strategy.rs  types.rs  volatility.rs
src/lighter_client/: auth.rs  client.rs  errors.rs  mod.rs  pagination.rs  params.rs  queries.rs  rest.rs
src/models/: detailed_account.rs  mod.rs  public_pool.rs  trade.rs
